// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Modal 0 jobs populates properly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-5"
          aria-labelledby="pf-modal-part-4"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-4"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-medium-4-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-4"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                view.label-{"context":"scans-ids","name":123}
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-5"
          >
            <div>
              0
               scan
              s have
               run
            </div>
            <br />
            <table
              aria-label="Scan jobs table"
              class="pf-v5-c-table pf-m-grid-md"
              data-ouia-component-id="OUIA-Generated-Table-1"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-1"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Time
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Result
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    scope="col"
                    tabindex="-1"
                  />
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              />
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Modal 1 job populates properly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-6"
          aria-labelledby="pf-modal-part-5"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-5"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-4"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-medium-5-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-5"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                view.label-{"context":"scans-ids","name":123}
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-6"
          >
            <div>
              1
               scan
               has
               run
            </div>
            <br />
            <table
              aria-label="Scan jobs table"
              class="pf-v5-c-table pf-m-grid-md"
              data-ouia-component-id="OUIA-Generated-Table-2"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Time
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Result
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    scope="col"
                    tabindex="-1"
                  />
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Time"
                    tabindex="-1"
                  >
                    30 August 2017, 12:19 PM UTC
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Result"
                    tabindex="-1"
                  >
                    completed
                  </td>
                  <td
                    class="pf-v5-c-table__td pf-v5-c-table__action"
                    data-label="Download"
                    tabindex="-1"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-1"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <span
                        class="pf-v5-c-button__icon pf-m-start"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                          />
                        </svg>
                      </span>
                      Download
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Modal loading screen populates properly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-4"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-3"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-medium-3-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-3"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                view.label-{"context":"scans-ids","name":123}
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-4"
          >
            <div
              class="pf-v5-l-bullseye"
            >
              <div
                class="pf-v5-c-empty-state"
              >
                <div
                  class="pf-v5-c-empty-state__content"
                >
                  <div
                    class="pf-v5-c-empty-state__header"
                  >
                    <div
                      class="pf-v5-c-empty-state__icon"
                    >
                      <svg
                        aria-hidden="false"
                        aria-label="Contents"
                        aria-valuetext="Loading..."
                        class="pf-v5-c-spinner pf-m-xl"
                        role="progressbar"
                        viewBox="0 0 100 100"
                      >
                        <circle
                          class="pf-v5-c-spinner__path"
                          cx="50"
                          cy="50"
                          fill="none"
                          r="45"
                        />
                      </svg>
                    </div>
                    <div
                      class="pf-v5-c-empty-state__title"
                    >
                      <h2
                        class="pf-v5-c-empty-state__title-text"
                      >
                        Loading scans
                      </h2>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Modal multiple jobs populates properly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-7"
          aria-labelledby="pf-modal-part-6"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-md"
          data-ouia-component-id="OUIA-Generated-Modal-medium-6"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-5"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-medium-6-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-6"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                view.label-{"context":"scans-ids","name":123}
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-7"
          >
            <div>
              2
               scan
              s have
               run
            </div>
            <br />
            <table
              aria-label="Scan jobs table"
              class="pf-v5-c-table pf-m-grid-md"
              data-ouia-component-id="OUIA-Generated-Table-3"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-4"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Time
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="pf-v5-c-table__th pf-v5-c-table__sort"
                    scope="col"
                    tabindex="-1"
                  >
                    <button
                      class="pf-v5-c-table__button"
                      type="button"
                    >
                      <div
                        class="pf-v5-c-table__button-content"
                      >
                        <span
                          class="pf-v5-c-table__text"
                        >
                          Scan Result
                        </span>
                        <span
                          class="pf-v5-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    scope="col"
                    tabindex="-1"
                  />
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-5"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Time"
                    tabindex="-1"
                  >
                    30 August 2017, 12:19 PM UTC
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Result"
                    tabindex="-1"
                  >
                    completed
                  </td>
                  <td
                    class="pf-v5-c-table__td pf-v5-c-table__action"
                    data-label="Download"
                    tabindex="-1"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-2"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <span
                        class="pf-v5-c-button__icon pf-m-start"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                          />
                        </svg>
                      </span>
                      Download
                    </button>
                  </td>
                </tr>
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-6"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Time"
                    tabindex="-1"
                  >
                    30 October 2020, 10:06 PM UTC
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="Scan Result"
                    tabindex="-1"
                  >
                    completed
                  </td>
                  <td
                    class="pf-v5-c-table__td pf-v5-c-table__action"
                    data-label="Download"
                    tabindex="-1"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-3"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <span
                        class="pf-v5-c-button__icon pf-m-start"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                          />
                        </svg>
                      </span>
                      Download
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
